# REStats

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
REStats/: REStats.ipynb  circular_metrics.py  forecast.ipynb  plots.py  utils.py
REStats/models/: __init__.py  arma.py  iec_power_curve.py  power_ar  power_ar.hpp  power_ar.stan  power_ar_ppc  power_ar_ppc.hpp  power_ar_ppc.stan  power_curve  power_curve.hpp  power_curve.py  power_curve.stan  power_curve_pred.stan  turbulence_intensity.py  weibull.py  weibull.stan  wind_dir.py  wind_speed.py  wind_speed.stan  wind_speed_pred.stan
REStats/notebooks/: EDA.ipynb  forecast.ipynb  power_curve.ipynb  sim.ipynb  thesis.ipynb
REStats/sim/: modeling_options.yaml
docs/: REStats.models.rst  REStats.rst  abstract.rst  conf.py  index.rst  modules.rst
tests/: test_circular_metrics.py  test_power_curve.py  test_utils.py
tests/models/: test_iec_power_curve.py  test_power_curve.py  test_weibull.py  test_wind_dir.py
