[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "REStats_camirmas"
version = "0.0.1"
authors = [
  { name="Cameron Irmas", email="cirmas@protonmail.com" },
]
description = "Statistical Learning Approaches for Renewable Energy Systems"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["REStats"]
