[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "REStats_camirmas"
version = "0.0.1"
authors = [
  { name="Cameron Irmas", email="cirmas@protonmail.com" },
]
description = "Statistical Learning Approaches for Renewable Energy Systems"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["REStats"]

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39"]
include = '\.pyi?$'

[tool.isort]
multi_line_output = 3
ensure_newline_before_comments = true
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true
length_sort = true
lines_after_imports = 2
line_length = 88
